Improve templates + attachments for emails

--- a/templates/mail/registrationConfirmation/message.txt.j2
+++ b/templates/mail/registrationConfirmation/message.txt.j2
@@ -2,5 +2,4 @@ Hello!
 
 For account activation, use this link: {{ activationLink }}
 
-----
-{{ mailName }} Team
+{{ include '../_common/footer.txt.j2' }}
