--- a/templates/mail/registrationCreatedAnalytics/message.html.j2
+++ b/templates/mail/registrationCreatedAnalytics/message.html.j2
@@ -1,6 +1,5 @@
 Hi!
-
+<br>
 We have a new user ({{ uName }} {{ uSurname }}, {{ uEmail }}) in our Wizard!
-
-----
-{{ mailName }} Team
+<br>
+{{ include '../_common/footer.html.j2' }}
