--- a/templates/mail/registrationCreatedAnalytics/message.txt.j2
+++ b/templates/mail/registrationCreatedAnalytics/message.txt.j2
@@ -1,6 +1,5 @@
 Hi!
-<br>
+
 We have a new user ({{ uName }} {{ uSurname }}, {{ uEmail }}) in our Wizard!
-<br>
-<hr>
-{{ mailName }} Team
+
+{{ include '../_common/footer.txt.j2' }}
