--- a/templates/mail/resetPassword/message.html.j2
+++ b/templates/mail/resetPassword/message.html.j2
@@ -2,5 +2,4 @@ Hello!
 <br>
 You can set up a new password <a href="{{ resetLink }}" target="_blank">here</a>!
 <br>
-<hr>
-{{ mailName }} Team
+{% include '../_common/footer.html.j2' %}
