Working CID and nicer templates

--- a/templates/mail/registrationConfirmation/message.txt.j2
+++ b/templates/mail/registrationConfirmation/message.txt.j2
@@ -1,5 +1,5 @@
-Hello!
+Dear {{ user.name }},
 
-For account activation, use this link: {{ activationLink }}
+for the activation of your account, please proceed here: {{ activationLink }}
 
-{{ include '../_common/footer.txt.j2' }}
+{% include '../_common/footer.txt.j2' %}
