--- a/templates/mail/registrationCreatedAnalytics/message.html.j2
+++ b/templates/mail/registrationCreatedAnalytics/message.html.j2
@@ -1,5 +1,17 @@
-Hi!
+{% extends '../_common/layout.html.j2' %}
+{% block body %}
+Hello!
 <br>
-We have a new user ({{ uName }} {{ uSurname }}, {{ uEmail }}) in our Wizard!
+Good news - we have a new user in our Wizard ({{ mailName}}):
+<dl>
+  <dt>Name<dt>
+  <dd>{{ user.name }} {{ user.surname }}</dd>
+  <dt>Email<dt>
+  <dd>{{ user.email }}</dd>
+  <dt>Role<dt>
+  <dd>{{ user.role }}</dd>
+</dl>
 <br>
-{{ include '../_common/footer.html.j2' }}
+Best regards,<br>
+{{ mailName }} Team
+{% endblock %}
