--- a/templates/mail/registrationConfirmation/message.html.j2
+++ b/templates/mail/registrationConfirmation/message.html.j2
@@ -1,5 +1,9 @@
-Hello!
+{% extends '../_common/layout.html.j2' %}
+{% block body %}
+Dear {{ user.name }},
 <br>
-For account activation, proceed <a href="{{ activationLink }}" target="_blank">here</a>!
-<br>
-{{ include '../_common/footer.html.j2' }}
+for the activation of your account, please proceed <a href="{{ activationLink }}" target="_blank">here</a>!
+<br><br>
+Best regards,<br>
+{{ mailName }} Team
+{% endblock %}
