--- a/templates/mail/resetPassword/message.html.j2
+++ b/templates/mail/resetPassword/message.html.j2
@@ -1,5 +1,9 @@
-Hello!
+{% extends '../_common/layout.html.j2' %}
+{% block body %}
+Dear {{ user.name }},
 <br>
-You can set up a new password <a href="{{ resetLink }}" target="_blank">here</a>!
-<br>
-{% include '../_common/footer.html.j2' %}
+you can set up a new password for your account <a href="{{ resetLink }}" target="_blank">here</a>!
+<br><br>
+Best regards,<br>
+{{ mailName }} Team
+{% endblock %}
