--- a/templates/mail/resetPassword/message.txt.j2
+++ b/templates/mail/resetPassword/message.txt.j2
@@ -1,5 +1,5 @@
-Hello!
+Dear {{ user.name }},
 
-You can set up a new password on {{ resetLink }}
+you can set up a new password for your account here: {{ resetLink }}
 
 {% include '../_common/footer.txt.j2' %}
