--- a/templates/mail/registrationConfirmation/message.html.j2
+++ b/templates/mail/registrationConfirmation/message.html.j2
@@ -2,7 +2,7 @@
 {% block body %}
 Dear {{ user.name }},
 <br>
-for the activation of your account, please proceed <a href="{{ activationLink }}" target="_blank">here</a>!
+For the activation of your account, please proceed <a href="{{ activationLink }}" target="_blank">here</a>.
 <br><br>
 Best regards,<br>
 {{ mailName }} Team
