--- a/templates/mail/registrationConfirmation/message.txt.j2
+++ b/templates/mail/registrationConfirmation/message.txt.j2
@@ -1,5 +1,5 @@
 Dear {{ user.name }},
 
-for the activation of your account, please proceed here: {{ activationLink }}
+For the activation of your account, please proceed here: {{ activationLink }}
 
 {% include '../_common/footer.txt.j2' %}
