--- a/templates/mail/resetPassword/message.html.j2
+++ b/templates/mail/resetPassword/message.html.j2
@@ -2,7 +2,7 @@
 {% block body %}
 Dear {{ user.name }},
 <br>
-you can set up a new password for your account <a href="{{ resetLink }}" target="_blank">here</a>!
+You can set up a new password for your account <a href="{{ resetLink }}" target="_blank">here</a>.
 <br><br>
 Best regards,<br>
 {{ mailName }} Team
