--- a/templates/dmp/root.css
+++ b/templates/dmp/root.css
@@ -147,6 +147,7 @@ footer {
   display: inline-block;
   padding: 0.1rem 0.5rem;
   margin-bottom: 0.25rem;
+  margin-right: 0.25rem;
   border: 1px solid #999;
   border-radius: 0.25rem;
   color: #999;
@@ -231,4 +232,14 @@ footer {
 
 .question.optional .no-answer {
   color: #9B9B9B;
+}
+
+.integration-link {
+  display: flex;
+  align-items: center;
+}
+
+.integration-link img {
+  max-height: 2rem;
+  margin-right: .5rem;
 }
