--- a/templates/dmp/root.css
+++ b/templates/dmp/root.css
@@ -40,15 +40,24 @@ header {
 header > h1 {
   font-size: 200%;
   margin: 0.5rem 0 ;
+  line-height: 3rem;
+  vertical-align: middle;
+}
+
+header > h1 > div.headline {
+  float: left;
+  margin-left: 1rem;
 }
 
 header > h1 > svg {
-  height: 2rem;
+  float: left;
+  height: 40px;
+  width: 50px;
   vertical-align: middle;
-  margin-right: 0.5rem;
+  margin: 0.5rem;
 }
 
-header::after {
+header h1::after {
   content: "";
   display: block;
   clear: both;
@@ -224,8 +233,10 @@ footer {
   vertical-align: middle;
 }
 
-.answer-block .answer svg {
-  height: 1rem;
+.answer-block .answer svg, 
+.no-answer svg {
+  height: 20px;
+  width: 20px;
   margin-right: 0.3rem;
   vertical-align: middle;
 }
@@ -237,12 +248,6 @@ footer {
 
 .no-answer {
   font-weight: bold;
-}
-
-.no-answer svg {
-  height: 1rem;
-  margin-right: 0.3rem;
-  vertical-align: middle;
 }
 
 .no-answer span {
