--- a/templates/dmp/root.css
+++ b/templates/dmp/root.css
@@ -90,6 +90,11 @@ dl dd {
   font-style: italic;
 }
 
+dl dt > span.package-id {
+  font-family: monospace;
+  font-style: normal;
+}
+
 /**************************/
 
 table {
