[DSW-493] Config option appTitle in mail template

--- a/templates/mail/_common/layout.html.j2
+++ b/templates/mail/_common/layout.html.j2
@@ -8,7 +8,7 @@
 <body>
   <header>
     <img src="cid:logo.png" alt="DSW logo">
-    <h1>Data Stewardship Wizard</h1>
+    <h1>{{ appTitle }}</h1>
   </header>
   <main>
     {% block body %}{% endblock %}
